# projeto_charleno

./: README.md  gemini_service.py  historico.json  main.py  models.py  pyproject.toml
Templates/: base.html  historico.html  index.html  resultado.html
static/: script.js  style.css
