[project]
name = "projeto-charleno"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "requests>=2.32.5",
    "python-dotenv>=1.0.0",
    "jinja2>=3.0.0",
    "python-multipart>=0.0.20",
]
